--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <!-- [if lt IE 9]>
+         <script
+           src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+         </script>
+    <![endif]-->
   </head>
 
   <body>
