--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to 'Magic Deckbuilder', '#', id: 'logo' %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to 'Home',   '#' %></li>
+            <li><%= link_to 'Help',   '#' %></li>
+            <li><%= link_to 'Log in', '#' %></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="container">
+      <%= yield %>
+    </main>
   </body>
 </html>
