--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,14 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
+    <header class="navbar sticky-top navbar-dark bg-dark">
       <div class="container">
         <%= link_to 'Magic Deckbuilder', '#', id: 'logo' %>
         <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to 'Home',   '#' %></li>
-            <li><%= link_to 'Help',   '#' %></li>
-            <li><%= link_to 'Log in', '#' %></li>
+          <ul class="nav">
+            <li class="nav-item px-2"><%= link_to 'Home',   '#' %></li>
+            <li class="nav-item px-2"><%= link_to 'Help',   '#' %></li>
+            <li class="nav-item px-2"><%= link_to 'Log in', '#' %></li>
           </ul>
         </nav>
       </div>
