--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -49,3 +49,22 @@ p {
     font-size: 1.1em;
     line-height: 1.7em;
 }
+
+/* Header */
+
+#logo {
+    float: left;
+    margin-right: 10px;
+    font-size: 1.7em;
+    color: #FFF;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#logo:hover {
+    color: #FFF;
+    text-decoration: none;
+}
