--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,4 +9,4 @@
 <%= link_to (image_tag 'rails.svg', alt: 'Rails logo', width: '200'),
             'https://rubyonrails.org/' %>
 
-<%= image_tag 'cat.jpg', alt: 'My cat', width: '200' %>
+<%= image_tag 'cat.jpg', alt: 'My cat', width: '200', class: 'invisible' %>
