--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
-    <!-- [if lt IE 9]>
-         <script
-           src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-         </script>
-    <![endif]-->
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= render "layouts/shim" %>
   </head>
 
   <body>
