--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,7 @@
   </head>
 
   <body>
-    <header class="navbar sticky-top navbar-dark bg-dark">
-      <div class="container">
-        <%= link_to 'Magic Deckbuilder', '#', id: 'logo' %>
-        <nav>
-          <ul class="nav">
-            <li class="nav-item px-2"><%= link_to 'Home',   '#' %></li>
-            <li class="nav-item px-2"><%= link_to 'Help',   '#' %></li>
-            <li class="nav-item px-2"><%= link_to 'Log in', '#' %></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <%= render "layouts/header" %>
     <main class="container">
       <%= yield %>
     </main>
