--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -17,10 +17,10 @@ textarea {
 
 .center {
     text-align: center;
-}
 
-.center h1 {
-    margin-bottom: 10px;
+    h1 {
+        margin-bottom: 10px;
+    }
 }
 
 /* Typography */
@@ -62,11 +62,11 @@ p {
     padding-top: 9px;
     font-weight: bold;
     text-decoration: none;
-}
 
-#logo:hover {
-    color: #FFF;
-    text-decoration: none;
+    &:hover {
+        color: #FFF;
+        text-decoration: none;
+    }
 }
 
 /* Footer */
@@ -76,26 +76,26 @@ footer {
     padding-top: 5px;
     border-top: 1px solid #eaeaea;
     color: #777;
-}
 
-footer a {
-    color: #555;
-}
+    a {
+        color: #555;
 
-footer a:hover {
-    color: #222;
-}
+        &:hover {
+            color: #222;
+        }
+    }
 
-footer small {
-    float: left;
-}
+    small {
+        float: left;
+    }
 
-footer ul {
-    float: right;
-    list-style: none;
-}
+    ul {
+        float: right;
+        list-style: none;
 
-footer ul li {
-    float: left;
-    margin-left: 15px;
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
 }
