--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,6 +1,11 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
+/* Variables */
+
+$gray-light:        #777;
+$gray-medium-light: #eaeaea;
+
 /* Universal */
 
 main {
@@ -42,7 +47,7 @@ h2 {
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color: $gray-light;
 }
 
 p {
@@ -74,14 +79,14 @@ p {
 footer {
     margin-top: 45px;
     padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: #777;
+    border-top: 1px solid $gray-medium-light;
+    color: $gray-light;
 
     a {
-        color: #555;
+        color: $gray-light;
 
         &:hover {
-            color: #222;
+            color: $gray-700;
         }
     }
 
