--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar sticky-top navbar-dark bg-dark">
   <div class="container">
-    <%= link_to 'Magic Deckbuilder', '#', id: 'logo' %>
+    <%= link_to 'Magic Deckbuilder', root_path, id: 'logo' %>
     <nav>
       <ul class="nav">
-        <li class="nav-item px-2"><%= link_to 'Home',   '#' %></li>
-        <li class="nav-item px-2"><%= link_to 'Help',   '#' %></li>
+        <li class="nav-item px-2"><%= link_to 'Home',   root_path %></li>
+        <li class="nav-item px-2"><%= link_to 'Help',   help_path %></li>
         <li class="nav-item px-2"><%= link_to 'Log in', '#' %></li>
       </ul>
     </nav>
