--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,6 @@
       <%= yield %>
     </main>
     <%= render "layouts/footer" %>
+    <%= (debug params) if Rails.env.development? %>
   </body>
 </html>
