--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,19 +4,21 @@
 <div class='row'>
   <div class='col-md-6 col-md-offset'>
     <%= form_with(model: @user, local: true) do |f| %>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
+      <%= render 'shared/error_messages' %>
 
-        <%= f.label :email %>
-        <%= f.email_field :email %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
 
-        <%= f.label :password %>
-        <%= f.password_field :password %>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
 
-        <%= f.label :password_confirmation, 'Confirmation' %>
-        <%= f.password_field :password_confirmation %>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
 
-        <%= f.submit 'Create my account', class: 'btn btn-primary' %>
+      <%= f.label :password_confirmation, 'Confirmation' %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit 'Create my account', class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
